  structur viewer scrolls to this picture in the text view
- Double click on a embedded object branch in the document
  structur viewer scrolls to this embedded object in the text view
- Fix with activating an embedded part
- Loading embedded parts doesn't crash anymore

Reggie, 6.2.1999:
-----------------
- More work on variables

Reggie, 7.2.1999:
-----------------
- Small fix in printLine

Reggie, 11.2.1999:
------------------
- Started with undo/redo
- Added copy constructor for KWParag

Reggie, 16.2.1999:
------------------
- Undo/Redo starts working
- Some fixes with formatting

Reggie, 17.2.1999:
------------------
- More undo/redo

Reggie, 18.2.1999:
------------------
- When a table flows over multiple pages the header (= first row)
  is shown on the beginning of the table part on each page. I'll
  add the possibility to switch this on/off - now it's on by
  default. Only the automatically added headers are not up-to-date
  all the time currently - I'll fix that.

Reggie, 24.2.1999:
------------------
- When a table flows over multiple pages and the table-header is copied to
  each page, it is updated correctly now.

Reggie, 25.2.1999:
------------------
- Fixed some segfaulting code
- Fixed some memory leaking code
- Table headers get really updated correctly now - there is only a repaint problem there now...

Reggie, 26.2.1999:
------------------
- Nearly fixed redraw problem when updating temp table headers
- Margins, borders, background colors, etc. of temp table headers are updated correctly now
- Started with more configuration possibilities for tables
- Some fixes with adding/removing temp table headers and cells in general

Reggie, 27.2.1999:
------------------
- Some more fixes in tables

Reggie, 28.2.1999:
------------------
- Much more work on variables

Reggie, 1.3.1999:
-----------------
- Implemented date variable and date variable format
- Implemented inserting variables (works with date variables)
- Some fixes in formatting text